--- a/index.html
+++ b/index.html
@@ -10,44 +10,50 @@
 <body>
     <header>
         <!--navbar-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">VirtualEduc</a>
+              <a class=" link-light navbar-brand" href="#">VirtualEduc</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Como Usar</a>
+                    <a class=" link-light nav-link active" aria-current="page" href="#">Como Usar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Quem somos</a>
+                    <a class=" link-light nav-link" href="#">Quem somos</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class=" link-light nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class=" link-light dropdown-item" href="#">Action</a></li>
+                      <li><a class=" link-light dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class=" link-light dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Acessar Conteúdo</a>
+                    <a class=" link-light nav-link disabled" aria-disabled="true">Acessar Conteúdo</a>
                   </li>
-                  <div name="buttons" class="end-0">
-                    <a class="btn btn-primary" href="#" role="button">Link</a>
-                    <a class="btn btn-info" href="#" role="button">Link</a>
-                  </div>
                 </ul>
+                <div name="buttons" class="position-absolute end-0 me-4">
+                  <a class=" link-light btn btn-primary" href="#" role="button">Link</a>
+                  <a class=" link-light btn btn-info" href="#" role="button">Link</a>
+                </div>
               </div>
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="">
+        <div class="">
+          <h1 class="text-center">Imagine um lugar...</h1>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
