--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="">
           <h1 class="text-center">Imagine um lugar...</h1>
         </div>
-        <div class="DivText bg-dark rounded-4 position-absolute top-50 start-50 translate-middle">
+        <div class="DivText bg-dark rounded-4 position-absolute top-50 start-50 translate-middle border border-warning">
           <h4 class="text-start text-warning ms-3 mt-2">
             O texto...
           </h4>
