--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                   </li>
                 </ul>
                 <div name="buttons" class="position-absolute end-0 me-4">
-                  <a class=" link-light btn btn-primary" href="#" role="button">Link</a>
-                  <a class=" link-light btn btn-info" href="#" role="button">Link</a>
+                  <a class=" link-light btn btn-primary" href="#" role="button">Cadastre-se</a>
+                  <a class=" link-light btn btn-info" href="#" role="button">Entrar</a>
                 </div>
               </div>
             </div>
@@ -54,7 +54,7 @@
         </div>
         <div class="DivText bg-dark rounded-4 position-absolute top-50 start-50 translate-middle border border-warning">
           <p id="texto" class="fs-4 text-start text-warning ms-3 mt-2">
-            O texto...
+            O texto...<span>|</span>
           </p>
         </div>
       </section>
