--- a/login.html
+++ b/login.html
@@ -1,35 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- Link para arquivo CSS -->
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <!-- Início do Cabeçalho-->
     <header>
-        
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+              <a class=" link-light navbar-brand" href="#">VirtualEduc</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class=" link-light nav-link active" aria-current="page" href="#">Como Usar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" link-light nav-link" href="#">Quem somos</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class=" link-light nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class=" link-light dropdown-item" href="#">Action</a></li>
+                      <li><a class=" link-light dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class=" link-light dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" link-light nav-link disabled" aria-disabled="true">Acessar Conteúdo</a>
+                  </li>
+                </ul>
+                <div name="buttons" class="position-absolute end-0 me-4">
+                  <a class=" link-light btn btn-primary" href="#" role="button">Cadastre-se</a>
+                  <a class=" link-light btn btn-info" href="#" role="button">Entrar</a>
+                </div>
+              </div>
+            </div>
+        </nav>
     </header>
      <!-- Fim do Cabeçalho-->
       <!-- Início do Corpo-->
-    <main class="">
-        <div class="w-50">
+    <main class="rounded-pill">
+        <div class="w-45 position-absolute top-50 start-50 translate-middle" id="caixa">
             <form>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <label for="exampleInputPassword1" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <label class="form-check-label" for="exampleCheck1"><a href="">Li e concordo com os termos</a></label>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
     </main>
