atualização login e organização

--- a/login.html
+++ b/login.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <!-- Link para arquivo CSS -->
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
-<body>
+<body class="bg-dark">
     <!-- Início do Cabeçalho-->
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
@@ -51,7 +50,7 @@
      <!-- Fim do Cabeçalho-->
       <!-- Início do Corpo-->
     <main class="rounded-pill">
-        <div class="w-45 position-absolute top-50 start-50 translate-middle" id="caixa">
+        <div class="w-30 position-absolute top-50 start-50 translate-middle bg-dark-subtle border border-primary" id="caixa">
             <form>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
