--- a/cadastro.html
+++ b/cadastro.html
@@ -10,8 +10,8 @@
 <body class="bg-dark">
     <header></header>
     <main class="position-absolute top-50 start-50 translate-middle">
-        <div class="border-light w-50 top-50 start-50 border p-3 rounded-4 text-bg-dark-subtle text-info">
-            <form class="row g-3">
+        <div id="FromCadastro" class="border-light top-50 start-50 border p-3 rounded-4 text-bg-dark-subtle bg-dark-subtle d-inline-block">
+            <form id="FormCadastro" class="row g-3">
                 <div class="col-md-6">
                   <label for="inputEmail4" class="form-label">Email</label>
                   <input type="email" class="form-control" id="inputEmail4">
@@ -56,6 +56,7 @@
                 </div>
               </form>
         </div>
+        <div></div>
     </main>
     <footer></footer>
     <!--bootstrap-->
