--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h1 class="text-center">Imagine um lugar...</h1>
         </div>
         <div class="DivText bg-dark rounded-4 position-absolute top-50 start-50 translate-middle border border-warning">
-          <p id="texto" class="fs-4 text-start text-warning ms-3 mt-2">
+          <p id="texto" class="fs-4 text-start ms-3 mt-2">
             O texto...<span>|</span>
           </p>
         </div>
