restauração do style.css e pequenas coisas

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                   </li>
                 </ul>
                 <div name="buttons" class="position-absolute end-0 me-4">
-                  <a class=" link-light btn btn-primary" href="#" role="button">Cadastre-se</a>
-                  <a class=" link-light btn btn-info" href="#" role="button">Entrar</a>
+                  <a class=" link-light btn btn-primary" href="./cadastro.php" role="button">Cadastre-se</a>
+                  <a class=" link-light btn btn-info" href="./login.php" role="button">Entrar</a>
                 </div>
               </div>
             </div>
