cor do bg do dropdown

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class=" link-light nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu bg-dark">
                       <li><a class=" link-light dropdown-item" href="#">Action</a></li>
                       <li><a class=" link-light dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
